# practice

./: README.md  main.cpp  題單.txt
Algo/: README.md  題單.txt
BIT/: bit.dev  main.cpp
Bicoloring/: Bicoloring.dev  Makefile.win  main.cpp
Big Multiply/: Big Multiply.dev  Big Multiply.layout  Makefile.win  main.cpp
CF 1213/: CF 1213.cbp  main.cpp
CF 1213 E/: CF 1213 E.depend  main.cpp
CF 1213A/: main.cpp
CF 1213B/: CF 1213B.depend  main.cpp
CF 1213C/: CF 1213C.layout  main.cpp
CF 1213D/: CF 1213D.cbp  CF 1213D.depend  CF 1213D.layout
CF 1214D/: CF 1214D.cbp  CF 1214D.layout  main.cpp
Code Alignment/: Code Alignment.layout  Makefile.win  main.cpp
Corp Finance/: Chap 6 Prob 13.xlsx
CorpFinance/: Chap 6 Prob 28.xlsx
Exgcd/: Exgcd.dev  Exgcd.layout
ICPC 150/: ICPC 150.cbp  ICPC 150.depend  main.cpp
Minimal Converage/: Makefile.win
Product/: UVa Product.dev
Projects/NTHU-Programing-I-Final-Project/Project/: CMakeLists.txt
Projects/NTHU-Programing-I-Final-Project/Project/Assets/: Project  log.txt
Projects/NTHU-Programing-I-Final-Project/Project/Source/: main.c
Projects/NTHU-Programing-I-Final-Project/Project/include/: IO.h  _utilities.h  boss.h  bullet_collision.h  enemy.h  init.h  physics_engine.h  plane.h  render.h  scoring.h  ultimate.h
Segment Tree/: Segemnt Tree.dev  main.cpp
TIOJ 1990/: main.cpp
TIOJ Ice line/: main.cpp
Ternary/: Makefile.win
Thanos sort/: main.cpp
UVA Birthday Cake/: Birthday Cake.dev  Birthday Cake.layout  Makefile.win  main.cpp
UVA i love big numbers v2/: Makefile.win  UVa i love big number v2.dev  (+1 more)
(+1875 files in other folders)
